# breast-cancer-ai

./: .gitignore  README.md  alembic.ini  app.db  main.py  manage_db.py  pyproject.toml  train_wisconsin_models.py
alembic/: env.py
alembic/versions/: a8b9ec836410_initial_migration.py  d24a4742aa81_add_breast_cancer_prediction_model.py
app/: __init__.py  auth.py  dependencies.py  main.py
app/database/: database.py  init.py
app/internal/: admin.py
app/ml/: __init__.py  breast_cancer_model.py  wisconsin_analyzer.py  wisconsin_ensemble.py
app/models/: models.py
app/routers/: medical.py  ml.py  users.py  wisconsin.py
docs/: AI_ML.md  DATABASE.md  FASTAPI.md  MODEL_MANAGEMENT.md  WEB_FRONTEND.md
static/css/: app.css  common.css
static/js/: alpine-components.js  api.js  common.js  form-handler.js  form-validator.js  ml-api.js  utils.js
tailwindcss/: package.json  pnpm-lock.yaml
templates/: base.html  breast_cancer_analysis.html  dashboard.html  dashboard_old.html  home.html  login.html  signup.html  wisconsin_analytics.html  wisconsin_prediction.html
templates/components/: breast_cancer_analysis.html  dashboard_nav.html  family_history.html  medical_records.html  overview.html  profile.html
