[project]
name = "ai"
version = "0.1.0"
description = "AI Medical Records Application with User Management"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.5",
    "colorama>=0.4.6",
    "fastapi[standard]>=0.117.1",
    "jinja2>=3.1.6",
    "joblib>=1.5.2",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "sqlmodel>=0.0.25",
]
